📝 docs(entry): added api docs for import
